--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,20 @@
-<!-- Put your HTML HERE, make sure to connect your style.css sheet -->
+
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="nav"></div>
+  <div class="container">
+
+
+    <div class="main"></div>
+    <div class="foot"></div>
+
+
+  </div>
+</body>
+</html>
